# numba-prototypes

./: .gitignore  LICENSE
.github/workflows/: conda-package.yml  pages.yml  pr-build.yml  sealir-tutorial-tests.yml
conda-recipe/: bld.bat  build.sh  meta.yaml
examples/llama3/: README.md  config.py  llama3.py  tokenizer.py
mlir-tutorials/: README.md
mlir-tutorials/tutorials/1. Simple Arithmetic in MLIR/: README.md  execution_engine.py  integer_return.ll  integer_return_final.mlir  simple_integer_return.mlir
mlir-tutorials/tutorials/2. Conditionals and Loops in MLIR/: README.md  loop_add.ll  loop_add.mlir  loop_add_conditional.ll  loop_add_conditional.mlir  loop_add_conditional_exec.py  loop_add_conditional_opt.mlir  loop_add_exec.py  loop_add_opt.mlir
mlir-tutorials/tutorials/3. MemRefs in MLIR/: README.md  array_index.ll  array_index.mlir  array_index_exec.py  array_index_opt.mlir  array_return.mlir  array_sum.ll  array_sum.mlir  array_sum_exec.py  array_sum_opt.mlir  array_trig.ll  array_trig.mlir  array_trig_exec.py  array_trig_opt.mlir
mlir-tutorials/tutorials/4. Parallelization using affine in MLIR/: README.md  array_trig_parallel.ll  array_trig_parallel.mlir  array_trig_parallel_exec.py  array_trig_parallel_opt.mlir  matrix_conv_parallel.ll  matrix_conv_parallel.mlir  matrix_conv_parallel_exec.py  matrix_conv_parallel_opt.mlir
mlir-tutorials/tutorials/4. Parallelization using affine in MLIR/eg/: output.txt
scratch/: llm.py  test.py  wpc.py
sealir-tutorials/: Makefile  README.md  ch01_basic_compiler.py  ch02_egraph_basic.py  ch03_egraph_program_rewrites.py  ch04_0_typeinfer_prelude.py  ch04_0_typeinfer_scalar.py  ch04_1_typeinfer_controlflow.py  ch04_1_typeinfer_ifelse.py  ch04_2_typeinfer_loops.py  ch04_typeinfer_scalar.py  ch05_typeinfer_array.py  ch06_mlir_backend.py  ch07_mlir_ufunc.py  ch08_gpu_offload.py  ch09_whole_program_compiler_driver.py  conda_environment.yml  demo01_gelu_tanh_approx.py  demo02_cuda_ufunc.py  egglog_to_inference.py  egglog_to_latex.py  egraph_chp02.py  index.py  jupytext.toml  llm.py  pyproject.toml  rvsdg_diagram_util.py  tests_ch04_0.py  utils.py  wpc.py
sealir-tutorials/basic_compiler/: README.md  main.py
sealir-tutorials/conda-recipe/: build.bat  build.sh  meta.yaml  test_package.py
sealir-tutorials/llama3-kernels/: softmax.py
sealir-tutorials/tests/: autotests.py  test_autotests.py  test_ch01.py  test_ch02.py  test_ch03.py  test_ch04.py  test_ch04_0.py  test_ch04_1.py  test_ch04_2.py  test_ch05.py  test_ch06.py  test_ch07.py  test_ch09.py  test_demo01.py
