[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sealir-tutorials"
version = "0.1.0"
description = "Kaleidoscope-style tutorials for Numba v2 compiler design"
readme = "README.md"
authors = [
    {name = "Numba Development Team", email = "numba-users@numba.pydata.org"},
]
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Education",
]
keywords = ["numba", "compiler", "tutorial", "mlir", "egraph"]
requires-python = ">=3.10"
dependencies = [
    "llvmlite>=0.44.0",
    "numpy",
    "networkx",
    "pytest",
    "nbconvert",
    "ipykernel",
    "jupyter",
    "jupytext",
    "graphviz",
    "egglog",
    "numba_rvsdg",
    "pytest-xdist",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/numba/numba-prototypes"
Documentation = "https://numba.pydata.org/numba-prototypes/sealir_tutorials/"
Repository = "https://github.com/numba/numba-prototypes"
Issues = "https://github.com/numba/numba-prototypes/issues"

[tool.setuptools]
py-modules = [
    "ch01_basic_compiler",
    "ch02_egraph_basic",
    "ch03_egraph_program_rewrites",
    "ch04_0_typeinfer_prelude",
    "ch04_1_typeinfer_ifelse",
    "ch04_2_typeinfer_loops",
    "ch05_typeinfer_array",
    "ch06_mlir_backend",
    "ch07_mlir_ufunc",
    "ch08_gpu_offload",
    "ch09_whole_program_compiler_driver",
    "demo01_gelu_tanh_approx",
    "demo02_cuda_ufunc",
    "utils",
    "llm",
]

[tool.setuptools.package-data]
"*" = ["*.ipynb", "*.toml", "Makefile", "README.md"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79